# abstract_method

./: Dockerfile  abstract_consol.py  main.py  pyproject.toml  setup.py
personal_assistant_bot/classes/: address.py  addressbook.py  birthday.py  email.py  name.py  note.py  notes.py  phone.py  record.py
personal_assistant_bot/functions/: functions.py  make_header.py  sort.py  split_text.py
personal_assistant_bot/settings/: settings.py
