[tool.poetry]
name = "abstract-method"
version = "0.1.0"
description = ""
authors = ["laugh-through-tears <fedoryshyn.juliia@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.6"
aiosqlite = "^0.20.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
